--- a/pcl/Countly/Countly.csproj
+++ b/pcl/Countly/Countly.csproj
@@ -34,55 +34,55 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\windows\Countly\Countly.cs">
+    <Compile Include="..\..\windows\Countly\Countly.cs">
       <Link>Countly.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\BeginSession.cs">
+    <Compile Include="..\..\windows\Countly\Entities\BeginSession.cs">
       <Link>Entities\BeginSession.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\CountlyEvent.cs">
+    <Compile Include="..\..\windows\Countly\Entities\CountlyEvent.cs">
       <Link>Entities\CountlyEvent.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\CountlyUserDetails.cs">
+    <Compile Include="..\..\windows\Countly\Entities\CountlyUserDetails.cs">
       <Link>Entities\CountlyUserDetails.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\CustomInfo.cs">
+    <Compile Include="..\..\windows\Countly\Entities\CustomInfo.cs">
       <Link>Entities\CustomInfo.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\CustomInfoItem.cs">
+    <Compile Include="..\..\windows\Countly\Entities\CustomInfoItem.cs">
       <Link>Entities\CustomInfoItem.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\EndSession.cs">
+    <Compile Include="..\..\windows\Countly\Entities\EndSession.cs">
       <Link>Entities\EndSession.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\ExceptionEvent.cs">
+    <Compile Include="..\..\windows\Countly\Entities\ExceptionEvent.cs">
       <Link>Entities\ExceptionEvent.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\Metrics.cs">
+    <Compile Include="..\..\windows\Countly\Entities\Metrics.cs">
       <Link>Entities\Metrics.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\Segmentation.cs">
+    <Compile Include="..\..\windows\Countly\Entities\Segmentation.cs">
       <Link>Entities\Segmentation.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\SegmentationItem.cs">
+    <Compile Include="..\..\windows\Countly\Entities\SegmentationItem.cs">
       <Link>Entities\SegmentationItem.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\SessionEvent.cs">
+    <Compile Include="..\..\windows\Countly\Entities\SessionEvent.cs">
       <Link>Entities\SessionEvent.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Entities\UpdateSession.cs">
+    <Compile Include="..\..\windows\Countly\Entities\UpdateSession.cs">
       <Link>Entities\UpdateSession.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Helpers\PhoneNameHelper.cs">
+    <Compile Include="..\..\windows\Countly\Helpers\PhoneNameHelper.cs">
       <Link>Helpers\PhoneNameHelper.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Helpers\TimeHelper.cs">
+    <Compile Include="..\..\windows\Countly\Helpers\TimeHelper.cs">
       <Link>Helpers\TimeHelper.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Server\Api.cs">
+    <Compile Include="..\..\windows\Countly\Server\Api.cs">
       <Link>Server\Api.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\windows\Countly\Server\Responses\ResultResponse.cs">
+    <Compile Include="..\..\windows\Countly\Server\Responses\ResultResponse.cs">
       <Link>Server\Responses\ResultResponse.cs</Link>
     </Compile>
     <Compile Include="Entities\Device.cs" />
